master: demo for susy grid

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -24,7 +24,8 @@ dl {
 }
 
 body {
-  background-color: $white;
+  background-color: $gray-light;
+  font-family: 'Raleway', sans-serif;
 }
 
 table,
