--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "compass";
 @import "h5bp";
 @import "susy";
+@import "breakpoint";
 @import "font-awesome-compass";
 @import "font-awesome";
 
