--- a/assets/scss/lib/_var.scss
+++ b/assets/scss/lib/_var.scss
@@ -56,7 +56,7 @@ $susy: (
   math: fluid,
   output: float,
   gutter-position: after,
-  container: auto,
+  container: 1200px,
   container-position: center,
   columns: 12,
   gutters: .25,
