--- a/assets/scss/_component.scss
+++ b/assets/scss/_component.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 auto;
+  @include clearfix;
   padding: 0;
 
   h1 {
@@ -14,7 +14,7 @@
 .block {
   @include border-radius;
   text-align: center;
-  margin: 0 0 gutter(10) 0;
+  margin: 0 0 gutter(10);
 }
 
 h2 {
@@ -32,7 +32,8 @@ h3 {
 .four,
 .five,
 .six,
-.seven {
+.seven,
+.eight {
   @include span(12 of 12);
 }
 
@@ -45,7 +46,8 @@ h3 {
 .four,
 .five,
 .six,
-.seven {
+.seven,
+.eight {
   background-color: $white;
 }
 
@@ -72,6 +74,24 @@ h3 {
         &.double {
           margin-left: 26px;
         }
+      }
+    }
+  }
+}
+
+.eight {
+  .gallery {
+    @include clearfix;
+    list-style-type: none;
+    padding-bottom: gutter(6);
+
+    .gallery-item {
+      @include gallery(2 of 6);
+      padding-top: gutter(6);
+
+      img {
+        width: 100%;
+        height: 100%;
       }
     }
   }
@@ -120,6 +140,11 @@ h3 {
 
     .seven {
       @include span(4 of 6 last);
+    }
+
+    .eight {
+      @include span(6 of 6);
+      clear: both;
     }
   }
 
