--- a/assets/scss/lib/_var.scss
+++ b/assets/scss/lib/_var.scss
@@ -61,7 +61,7 @@ $susy: (
   columns: 12,
   gutters: .25,
   column-width: false,
-  global-box-sizing: content-box,
+  global-box-sizing: border-box,
   last-flow: to,
   debug: (
     image: show,
